--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
 .projects-grid {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .project-tile {
@@ -61,4 +62,11 @@ figure {
 figcaption{
     text-align: center;
     
+}
+
+#contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
 }
