--- a/starwars/style.css
+++ b/starwars/style.css
@@ -18,6 +18,6 @@ figure {
 
 figcaption {
     text-align: center;
-    background-color: black;
-    color: #fff;
+    background-color: rgb(0, 0, 0);
+    color: #ffffff;
 }
