--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
   justify-content: flex-end;
   position: fixed;
   width: 100%;
-  background-color:#585459;
+  /*background-color:#585459;*/
+  background-color:#510664;
   z-index: 9999;
 }
 
