newbuttonsforPokemon, and start of card.

--- a/pokemon/pokestyles.css
+++ b/pokemon/pokestyles.css
@@ -1,3 +1,16 @@
-.loadPokemon {
-    background-color: red;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.pokeGrid {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.scene {
+    width: 200px;
+    height: 260px;
+    border: 1px solid navy;
 }
