--- a/pokemon/pokestyles.css
+++ b/pokemon/pokestyles.css
@@ -13,9 +13,9 @@
 .scene {
     width: 200px;
     height: 260px;
-    border: 1px solid navy;
     margin: 5px;
     perspective: 600px;
+    
 }
 
 
@@ -36,6 +36,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     text-align: center;
     font-weight: bold;
     backface-visibility: hidden;
