--- a/pokemon/pokestyles.css
+++ b/pokemon/pokestyles.css
@@ -11,9 +11,9 @@
 }
 
 .scene {
-    width: 200px;
+    width: 185px;
     height: 260px;
-    margin: 5px;
+    margin: 3px;
     perspective: 600px;
     
 }
@@ -26,6 +26,7 @@
     transform-style: preserve-3d;
     cursor: pointer;
     position: relative;
+    
 }
 
 .card.is-flipped {
@@ -40,13 +41,26 @@
     text-align: center;
     font-weight: bold;
     backface-visibility: hidden;
+    
 }
 
 .card_face-front {
-    background: red;
+    background: #333;
+    background-image: url(/images/pokemon-card-back-png-1-Transparent-Images.png);
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px;
+    
 }
 
 .card_face-back {
-    background: blue;
+    background: #333;
+    background-image: url(/images/cardback.png);
     transform: rotateY(180deg);
+    color: yellow;
+    display: flex;
+    justify-content:end;
+    flex-direction: column;
 }
