--- a/pokemon/pokestyles.css
+++ b/pokemon/pokestyles.css
@@ -2,12 +2,31 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+}
+
+.buttons {
+    background-color: #999;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 60px;
+    border-radius: 10px;
+    margin: 20px;
+}
+
+header {
+    background-color: #333;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .pokeGrid {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background-color: #333;
 }
 
 .scene {
@@ -58,7 +77,7 @@
 
 .card_face-back {
     background: #333;
-    background-image: url(/images/cardback.png);
+    background-image: url(/images/pokecard_basic.png);
     transform: rotateY(180deg);
     color: white;
     font-size: 220%;
@@ -70,38 +89,53 @@
 }
 
 
+
 .fire {
     background-color: red;
+    background-image: url(/images/pokecard_fire.png);
 }
 
 .grass {
     background-color: green;
+    background-image: url(/images/pokecard_green.png);
 }
 
 .bug {
     background-color: lightgreen;
+    background-image: url(/images/pokecard_green.png);
 }
 
 .poison {
     background-color: purple;
+    background-image: url(/images/pokecard_poison.png);
 }
 
 .water {
     background-color: blue;
+    background-image: url(/images/pokecard_water.png);
 }
 
 .ground {
     background-color: yellow;
+    background-image: url(/images/pokecard_rock.png);
 }
 
 .electric {
     background-color: yellow;
+    background-image: url(/images/pokecard_lightning.png);
 }
 
 .fairy {
     background-color: pink;
+    background-image: url(/images/pokecard_fairy.png);
 }
 
 .normal {
     background-color: rgb(95, 47, 3);
 }
+
+.dragon {
+    background-color:#333;
+    background-image: url(/images/pokecard_dragon.png);
+}
+
