--- a/pokemon/pokestyles.css
+++ b/pokemon/pokestyles.css
@@ -16,18 +16,21 @@
     margin: 20px;
     font-size: 120%;
     text-align:center;
-    padding: 15px;
+    padding: .5%;
 }
 
 .buttons:hover {
     color: navy;
 }
 
+
 header {
     background-color: #333;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    color: White;
+    padding: 20px;
 }
 
 .pokeGrid {
@@ -37,14 +40,16 @@ header {
     background-color: #333;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
 .scene {
     width: 185px;
     height: 260px;
     margin: 3px;
     perspective: 600px;
-    
 }
-
 
 .card {
     width: 100%;
