--- a/congress/styles.css
+++ b/congress/styles.css
@@ -5,15 +5,28 @@
 }
 
 header {
+    font-size: 100%;
     text-align: center;
-    margin: 50px;
+    padding: 10%;
+    background-image:url(/images/whitehouse.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    color: white;
+    justify-content: space-evenly;
+}
+.buttons {
+    padding: 3%;
+    margin: 1px;
+    opacity: .7;
 }
 
 .congressGrid {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    
 }
+
 
 .figureDiv {
     margin: 6px;
