--- a/films/style.css
+++ b/films/style.css
@@ -19,6 +19,7 @@ figure {
 figure:hover {
     transform: scale(1.1);
     transition: transform 0.3s ease-out;
+    box-shadow: 0px 0px 10px lightblue;
 }
 
 figcaption {
