--- a/characters/styles.css
+++ b/characters/styles.css
@@ -4,8 +4,10 @@
 }
 
 header {
-    
-    padding: 50px;
+    background-color:black;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 #main {
@@ -14,6 +16,23 @@ header {
     background-color: black;
     background-image:url(/images/swbattle.jpg);
 }
+
+button {
+    opacity: .7;
+    margin: 10px;
+    box-shadow: 0px 0px 8px white;
+}
+
+body {
+    background-color:black;
+    color: lightblue;
+    text-shadow: 0px 0px 6px white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 20px;
+}
+
 
 figure > img {
     height: 200px;
